@@ -1,5 +1,12 @@
 2002-03-06  Sam Steingold  <sds@gnu.org>
 
+	* autoconf/aclocal.m4 (CL_STRERROR, CL_FSYNC, CL_UALARM)
+	(CL_USLEEP): removed trivial defuns
+	* configure.in: call AC_CHECK_FUNCS for strerror(), fsync(),
+	ualarm() and usleep() directly
+
+2002-03-06  Sam Steingold  <sds@gnu.org>
+
 	* foreign.d (FOREIGN-ADDRESS-VALUE): handle foreign pointers too
 
 2002-03-04  Sam Steingold  <sds@gnu.org>
